--- a/Web1/Module1/fpwStage01_drehbein/fpwStage01.html
+++ b/Web1/Module1/fpwStage01_drehbein/fpwStage01.html
@@ -33,9 +33,9 @@
 
       <a href="target URL">link text the user sees</a>
     -->
-    <a href="https://developer.mozilla.org">MDN</a>
+    <!-- <a href="https://developer.mozilla.org">MDN</a>
     <br><br>
-    <a href="http://www.cvtc.edu" target="_blank">CVTC</a>
+    <a href="http://www.cvtc.edu" target="_blank">CVTC</a> -->
 
     <!-- 
       List-related tags in HTML
@@ -86,7 +86,39 @@
     </nav>
 
     <!-- Display a horizontal line that takes up 90% of the width of the page -->
-    <hr width="90%">
+    <hr style="width: 90%;">
+
+    <!-- Main page content -->
+    <main>
+      <!-- Use a definition list to create main content. -->
+      <dl>
+        <div>
+          <dt><strong><em>Why 1870?</em></strong></dt>
+          <dd>Large colorfully uniformed armies with diverse types of units.</dd>
+          <dd><p>Large-scale battle, many of which were very close-run affairs with lots of "what-if" scenarios.</p></dd>
+          <dd><p>The fall of one empire. The rise of another.</p></dd>
+          <dd><p>Seeds sown of a future, yet even more terrible war.</p></dd>
+        </div>
+
+        <div>
+          <dt><strong>Today's Snapshot</strong></dt>
+          <dd>
+            <blockquote>
+              "Gengeral Frossard, undefeated, thought he had been defeated, and so he was. General von Zastrow was half-defeated, but refused to be so was not. This was the secret to the Prussian vivtory."
+              <br><br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>French historian</em>
+              <pre>                                                      <em>French historian</em></pre> <!-- Changes font?-->
+            </blockquote>
+          </dd>
+        </div>
+      </dl>
+    </main>
+
+    <br><br><br>
+
+    <footer>
+      <small>&copy; 2025 Devion Rehbein</small>
+    </footer>
 
   </div>
 
