--- a/Web1/Module2/fpwStage02_drehbein/fpwStage02.html
+++ b/Web1/Module2/fpwStage02_drehbein/fpwStage02.html
@@ -3,7 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Franco-Prussian War - Stage01 - Devion Rehbein</title>
+  <title>Franco-Prussian War - Stage02 - Devion Rehbein</title>
+
+  <!-- Embedded global styles, this page only -->
+  <style>
+    /*
+      Syntax of a CSS style rule:
+
+      selector {
+        attributeName: value;
+        attributeName: value;
+        .
+        .
+        attributeName: value;
+      }
+    */
+
+    body {
+      color: green;
+      /* background-color: thistle;
+      background-image: url(images/bGround01.jpg);
+      background-repeat: no-repeat;
+      background-position: center center; */
+      background: thistle url(images/bGround01.jpg) no-repeat 50% 0%;
+    }
+
+    h1 {
+      color: red;
+    }
+
+    #logo1870 {
+      color: purple;
+    }
+
+  </style>
 </head>
 <body>
 
@@ -11,76 +44,18 @@
 
     <!-- A <header> tag is used to display header content -->
     <header>
-      <h1 style="font-size: 5rem; color: rgb(128, 0, 128)">1870</h1>
+      <a href="http://codrops.com" target="_blank"><img src="images/Diary01_with_tapedPic.png" alt="1870 Diary"></a>
+      <h1 id="logo1870" style="color:yellow">1870</h1>
+      <h1>Stuff</h1>
       <h2>The Franco-Prussian War</h2>
-      <!-- <h3>1870</h3>
-      <h4>1870</h4>
-      <h5>1870</h5>
-      <h6>1870</h6> -->
     </header>
-    <br><br>
-    <p>The French fought against the Germans.  The Germans won.</p>
-    
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor tenetur impedit voluptatum numquam accusamus corporis possimus eveniet animi eum? Minima vitae, eligendi quaerat fuga neque reiciendis adipisci. Quam, in sint?</p>
-
-    <!-- 
-      Hypertext Links
-      <a href="https://developer.mozilla.org">MDN</a>
-
-      URL = Uniform Resource Locator = web address
-
-      protocol://domainName/filepath
-
-      <a href="target URL">link text the user sees</a>
-    -->
-    <!-- <a href="https://developer.mozilla.org">MDN</a>
-    <br><br>
-    <a href="http://www.cvtc.edu" target="_blank">CVTC</a> -->
-
-    <!-- 
-      List-related tags in HTML
-
-      <ul>  unordered (bulleted) list
-      <ol>  ordered (numbered) list
-
-        Both <ul> and <ol> tags use <li> tags to represent their list items.  <li> tags should always be inside (children of) the opening and closing <ul> or <ol> tags.  They should NEVER be on their own.
-
-      <dl>  definition list - used to define a set of terms and uses indentation to set the list items apart.
-
-        Uses <dt> for definition terms and <dd> for definition data.
-    -->
-    <!-- <br><br>
-    <h3>Names for Bigfoot:</h3>
-    <ul type="square">
-      <li>Bigfoot</li>
-      <li>Sasquatch</li>
-      <li>Yeti</li>
-      <li>Skunk Ape</li>
-      <li>Yowie</li>
-      <li>Kushtaka</li>
-      <li>Rugaroo</li>
-      <li>Grassman</li>
-    </ul>
-
-    <br><br>
-    <h3>Names for Bigfoot:</h3>
-    <ol type="I">
-      <li>Bigfoot</li>
-      <li>Sasquatch</li>
-      <li>Yeti</li>
-      <li>Skunk Ape</li>
-      <li>Yowie</li>
-      <li>Kushtaka</li>
-      <li>Rugaroo</li>
-      <li>Grassman</li>
-    </ol> -->
 
     <nav>
       <ul>
-        <li><a href="theWar/theWar.html">The War</a></li>
-        <li><a href="theDepot/theDepot.html">The Depot</a></li>
-        <li><a href="gaming1870/gaming1870.html">Gaming 1870</a></li>
-        <li><a href="theArt/theArt.html">The Art</a></li>
+        <li><a href="theWar/theWar.html">The War</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+        <li><a href="theDepot/theDepot.html">The Depot</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+        <li><a href="gaming1870/gaming1870.html">Gaming 1870</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+        <li><a href="theArt/theArt.html">The Art</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
         <li><a href="theLibrary/theLibrary.html">The Library</a></li>
       </ul>
     </nav>
@@ -92,7 +67,7 @@
     <main>
       <!-- Use a definition list to create main content. -->
       <dl>
-        <div>
+        <div class="dlDiv">
           <dt><strong><em>Why 1870?</em></strong></dt>
           <dd>Large colorfully uniformed armies with diverse types of units.</dd>
           <dd><p>Large-scale battle, many of which were very close-run affairs with lots of "what-if" scenarios.</p></dd>
@@ -100,14 +75,13 @@
           <dd><p>Seeds sown of a future, yet even more terrible war.</p></dd>
         </div>
 
-        <div>
+        <div class="dlDiv">
           <dt><strong>Today's Snapshot</strong></dt>
           <dd>
             <blockquote>
               "Gengeral Frossard, undefeated, thought he had been defeated, and so he was. General von Zastrow was half-defeated, but refused to be so was not. This was the secret to the Prussian vivtory."
               <br><br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>French historian</em>
-              <pre>                                                      <em>French historian</em></pre> <!-- Changes font?-->
             </blockquote>
           </dd>
         </div>
@@ -115,9 +89,25 @@
     </main>
 
     <br><br><br>
-
     <footer>
-      <small>&copy; 2025 Devion Rehbein</small>
+      <nav id="bottomNav">
+        <ul>
+          <li><a href="theWar/theWar.html">The War</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+          <li><a href="theDepot/theDepot.html">The Depot</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+          <li><a href="gaming1870/gaming1870.html">Gaming 1870</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+          <li><a href="theArt/theArt.html">The Art</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+          <li><a href="theLibrary/theLibrary.html">The Library</a></li>
+        </ul>
+      </nav>
+
+      <!-- Copyright and contact email -->
+      <div id="footerInfo" class="footerInfo">
+        <small>
+          &copy; 2025 Devion Rehbein &nbsp; All rights reserved
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="mailto:drehbein@student.cvtc.edu">Send a dispatch.</a>
+        </small>
+      </div>
     </footer>
 
   </div>
