Participated with class on September 4, 2025

--- a/Web1/Module2/fpwStage02_drehbein/fpwStage02.html
+++ b/Web1/Module2/fpwStage02_drehbein/fpwStage02.html
@@ -6,7 +6,7 @@
   <title>Franco-Prussian War - Stage02 - Devion Rehbein</title>
 
   <!-- Embedded global styles, this page only -->
-  <style>
+  <!-- <style>
     /*
       Syntax of a CSS style rule:
 
@@ -36,7 +36,24 @@
       color: purple;
     }
 
-  </style>
+    .dlDiv {
+      color: orange;
+    }
+
+    ul a {
+      color: fuchsia;
+      text-decoration: none;
+    }
+
+    ul a:hover {
+      color: rgb(139, 22, 139);
+      text-decoration: underline;
+      text-transform: uppercase;
+    }
+
+  </style> -->
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -45,8 +62,8 @@
     <!-- A <header> tag is used to display header content -->
     <header>
       <a href="http://codrops.com" target="_blank"><img src="images/Diary01_with_tapedPic.png" alt="1870 Diary"></a>
-      <h1 id="logo1870" style="color:yellow">1870</h1>
-      <h1>Stuff</h1>
+      <h1 id="logo1870">1870</h1>
+      <!-- <h1>Stuff</h1> -->
       <h2>The Franco-Prussian War</h2>
     </header>
 
@@ -65,6 +82,7 @@
 
     <!-- Main page content -->
     <main>
+      <a href="htts//:cvtc.edu.edy">CVTC</a>
       <!-- Use a definition list to create main content. -->
       <dl>
         <div class="dlDiv">
