Customized logo, Added HTML structure

--- a/graphicalBudgeting/index.html
+++ b/graphicalBudgeting/index.html
@@ -5,10 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graphical Budgeting</title>
   <link rel="stylesheet" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/svg" href="logo.svg">
   <script src="script.js"></script>
 </head>
 <body>
-  
+  <header>
+    <a href="/index.html"><img src="logo.svg" alt="Graphical Budgeting logo"></a>
+    <h1>Graphical Budgeting</h1>
+    <nav>
+      <a href="/index.html">Home</a> |
+      <a href="#">Editor</a> |
+      <a href="#">Settings</a>
+    </nav>
+  </header>
+  <hr>
+  <main>
+    <section>
+      <!-- graph! -->
+    </section>
+    <div>
+      <!-- list form -->
+       <section>
+        <!-- expenses -->
+       </section>
+       <section>
+        <!-- income -->
+       </section>
+    </div>
+  </main>
+  <hr>
+  <footer>
+    <nav>
+      <a href="/index.html">Home</a> |
+      <a href="#">Editor</a> |
+      <a href="#">Settings</a>
+    </nav>
+    Copyright &copy; 2025 Graphical Budgeting
+  </footer>
 </body>
 </html>
