Adjusted Discover Juneau project with instructor feedback

--- a/Web1/Module2/DiscoverJuneau_Part01_drehbein/attractions.html
+++ b/Web1/Module2/DiscoverJuneau_Part01_drehbein/attractions.html
@@ -9,13 +9,13 @@
   <header>
     <h1>Discover Juneau</h1>
     <h2>The Last Frontier</h2>
+  </header>
     <nav>
-      <a href="index.html">Home</a> | 
-      <a href="attractions.html">What To Do</a> | 
-      <a href="explore.html">How To Explore</a> | 
+      <a href="index.html">Home</a>&nbsp;|
+      <a href="attractions.html">What To Do</a>&nbsp;|
+      <a href="explore.html">How To Explore</a>&nbsp;|
       <a href="lodging.html">Where To Stay</a>
     </nav>
-  </header>
   <main>
     <h2>What To Do</h2>
     <p>Enjoy the history of Juneau but leave plenty of time for adventure! The landscape is undeniably beautiful and there are many opportunities to take in the scenery. Complete your day with dinner in the many restaurants in the beautiful, historic downtown and stop in one of the many shops on your way back home.</p>
@@ -38,8 +38,8 @@
     Copyright &copy; 2024 The Last Frontier<br>
     <a href="mailto:drehbein@student.cvtc.edu">drehbein@student.cvtc.edu</a><br><br>
     <nav>
-      <a href="#">Legal Stuff</a> |
-      <a href="#">Privacy Policy</a> |
+      <a href="#">Legal Stuff</a>&nbsp;|
+      <a href="#">Privacy Policy</a>&nbsp;|
       <a href="#">Security</a>
     </nav>
   </footer>
