--- a/Web1/Module2/DiscoverJuneau_Part01_drehbein/index.html
+++ b/Web1/Module2/DiscoverJuneau_Part01_drehbein/index.html
@@ -9,13 +9,13 @@
   <header>
     <h1>Discover Juneau</h1>
     <h2>The Last Frontier</h2>
-    <nav>
-      <a href="index.html">Home</a> | 
-      <a href="attractions.html">What To Do</a> | 
-      <a href="explore.html">How To Explore</a> | 
-      <a href="lodging.html">Where To Stay</a>
-    </nav>
   </header>
+  <nav>
+    <a href="index.html">Home</a>&nbsp;|
+    <a href="attractions.html">What To Do</a>&nbsp;|
+    <a href="explore.html">How To Explore</a>&nbsp;|
+    <a href="lodging.html">Where To Stay</a>
+  </nav>
   <main>
     <h2>History</h2>
     <p>Juneau is more than stunning views, imposing mountains, and running blue waters. This is a city full of history that spans for centuries before colonization and the Gold Rush which gave it its name and legacy. It's a city with character and personality, and arguably deserves the status of “heart of Alaskan culture”. You will feel this in the city year-round, and experience it in the people, landscape and wonders of Alaska!</p>
@@ -32,7 +32,7 @@
       </address>
     </section>
   </main>
-  <br><br><hr>
+  <br><hr>
   <div>
     <h3>Get lost in the beauty of the Alaskan Wilderness</h3>
   </div>
@@ -42,8 +42,8 @@
     Copyright &copy; 2024 The Last Frontier<br>
     <a href="mailto:drehbein@student.cvtc.edu">drehbein@student.cvtc.edu</a><br><br>
     <nav>
-      <a href="#">Legal Stuff</a> |
-      <a href="#">Privacy Policy</a> |
+      <a href="#">Legal Stuff</a>&nbsp;|
+      <a href="#">Privacy Policy</a>&nbsp;|
       <a href="#">Security</a>
     </nav>
   </footer>
