Made duck with Kat

--- a/Web1/Module1/homePage_drehbein.html
+++ b/Web1/Module1/homePage_drehbein.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Devion Rehbein</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <h1>Devion Rehbein</h1>
@@ -23,5 +25,7 @@
   </ul>
   <h3>Why IT-SD?</h3>
   <p>My goal is to get a job that pays enough that I can put (much) more toward my long term savings. I also want a job that has a less job hazards. I also want to work remote so I can move and travel without being anchored to a job.</p>
+  <h1 id="KatHeader">Kat</h1>
+  <img id="duck" src="duck.png" alt="floating duck">
 </body>
 </html>
