Fixed broken link to home page

--- a/Web1/Module3/fpwStage03_drehbein/theWar/theWar.html
+++ b/Web1/Module3/fpwStage03_drehbein/theWar/theWar.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
 
     <header>
-      <a href="../fpwStage02.html" target="_blank"><img src="../images/Diary01_with_tapedPic.png" alt="1870 Diary"></a>
+      <a href="../fpwStage03.html"><img src="../images/Diary01_with_tapedPic.png" alt="1870 Diary"></a>
       <h1 id="logo1870">1870</h1>
       <h2>The Franco-Prussian War</h2>
     </header>
