Participated with class on September 16, 2025

--- a/Web1/Module3/fpwStage03_drehbein/theWar/theWar.html
+++ b/Web1/Module3/fpwStage03_drehbein/theWar/theWar.html
@@ -13,22 +13,20 @@
   <div class="wrapper">
 
     <header>
-      <a href="../fpwStage03.html"><img src="../images/Diary01_with_tapedPic.png" alt="1870 Diary"></a>
+      <a href="../fpwStage03.html" target="_blank"><img src="../images/Diary01_with_tapedPic.png" alt="1870 Diary"></a>
       <h1 id="logo1870">1870</h1>
-      <h2>The Franco-Prussian War</h2>
+      <h2>The War</h2>
     </header>
 
     <nav>
       <ul>
-        <li>The War &nbsp;&nbsp;|&nbsp;&nbsp;</li>
-        <li><a href="theDepot/theDepot.html">The Depot</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
-        <li><a href="gaming1870/gaming1870.html">Gaming 1870</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
-        <li><a href="theArt/theArt.html">The Art</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+        <li>The War | </li>
+        <li><a href="theDepot/theDepot.html">The Depot</a> | </li>
+        <li><a href="gaming1870/gaming1870.html">Gaming 1870</a> | </li>
+        <li><a href="theArt/theArt.html">The Art</a> | </li>
         <li><a href="theLibrary/theLibrary.html">The Library</a></li>
       </ul>
     </nav>
-
-    <hr>
 
     <!-- Main content of the page -->
     <main>
@@ -107,31 +105,27 @@
       </section>
     </main>
 
-    <br><br><br>
     <footer>
       <nav id="bottomNav">
         <ul>
-          <li>The War &nbsp;&nbsp;|&nbsp;&nbsp;</li>
-          <li><a href="theDepot/theDepot.html">The Depot</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
-          <li><a href="gaming1870/gaming1870.html">Gaming 1870</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
-          <li><a href="theArt/theArt.html">The Art</a> &nbsp;&nbsp;|&nbsp;&nbsp;</li>
+          <li>The War | </li>
+          <li><a href="theDepot/theDepot.html">The Depot</a> | </li>
+          <li><a href="gaming1870/gaming1870.html">Gaming 1870</a> | </li>
+          <li><a href="theArt/theArt.html">The Art</a> | </li>
           <li><a href="theLibrary/theLibrary.html">The Library</a></li>
         </ul>
       </nav>
 
       <!-- Copyright and contact email -->
       <div id="footerInfo" class="footerInfo">
+        <br><br>
         <small>
           &copy; 2025 Devion Rehbein &nbsp; All rights reserved
 
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="mailto:drehbein@student.cvtc.edu">Send a dispatch</a>
         </small>
       </div>
-      
     </footer>
-
   </div>
-  
 </body>
 </html>
