Completed Discover Juneau project part two

--- a/Web1/Module3/DiscoverJuneau_Part02_drehbein/explore.html
+++ b/Web1/Module3/DiscoverJuneau_Part02_drehbein/explore.html
@@ -41,6 +41,7 @@
           <a href="http://www.juneauwhalewatch.com">juneauwhalewatch.com</a>
         </li>
       </ul>
+    </main>
     <br><hr>
     <aside>
       <img src="images/beautyAnimation.gif" alt="Get lost in the beauty of the Alaskan Wilderness">
