--- a/Web1/Module4/fpwStage04_drehbein/fpwStage04.html
+++ b/Web1/Module4/fpwStage04_drehbein/fpwStage04.html
@@ -41,10 +41,10 @@
 
         <div class="main">
           <div id="navDescription">
-             <section id="defaultTab" class="tabDescription">
+            <section id="defaultTab" class="tabDescription">
               <img src="images/navPhotos/default_polaroidSmall.png" alt="Default 1870 Polaroid Image">
               <h3>The Franco-Prussian War</h3>
-              <p>1870 was a disaster for France causing that action tp thirst for a chance to avenge their territorial losses. On the other side of the hill, the war led to the establishment of a united Gernam enpire headed by Prussia.</p>
+              <p>1870 was a disaster for France causing that action to thirst for a chance to avenge their territorial losses. On the other side of the hill, the war led to the establishment of a united Gernam enpire headed by Prussia.</p>
             </section>
 
             <section id="theWarTab" class="tabDescription">
