--- a/graphicalBudgeting/index.html
+++ b/graphicalBudgeting/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graphical Budgeting</title> <!-- Name ideas: visual..., ...finance, combine into new word like VisCash?-->
+  <title>Graphical Budgeting</title> <!-- Name ideas: visual..., ...finance, combine into new word like VisCash, glance finance-->
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" type="image/svg" href="logo.svg">
   <script src="script.js"></script>
@@ -11,8 +11,8 @@
 <body>
   <header>
     <a href="/index.html"><img id="headerLogo" src="images/logo.svg" alt="Graphical Budgeting logo"></a> <!-- TODO: round corners on logo arrow -->
-    <h2 id="date">September 2025</h2>
-    <h2 id="userName">Devion R</h2>
+    <h1 id="date">September 2025</h1>
+    <h1 id="userName">Devion R</h1>
     <img id="userAvatar" src="images/defaultAvatar.svg" alt="User avatar">
     <img src="images/menuIcon.svg" alt="Menu button">
   </header>
@@ -27,31 +27,69 @@
         </p>
       </div>
       <menu id="graphOptions">
-        <h3>Options</h3>
+        <h2>Options</h2>
         <ul>
-          <li>Set initial $/date</li>
-          <li>Time range</li>
-          <li>Time increments</li>
-          <li>Zero origin</li> <!-- Toggle origin being zero or relative minimum -->
-          <li>Color Sceme</li>
-          <li>Breakdown</li> <!-- Toggle line graph to bar graph, color coded by category -->
+          <li>[Color sceme dropdown]</li>
+          <li>[Editor button]</li>
         </ul>
-      </menu> 
+        <h3>Graph</h3>
+        <ul>
+          <li>[Initial capital text input] | [Initial date calendar selector]</li>
+          <li>[Time range slider]</li>
+          <li>[Time increments slider]</li>
+          <li>[Origin toggle]</li> <!-- Toggle origin being zero or relative minimum -->
+          <li>[Categories toggle]</li> <!-- Toggle line graph to bar graph, color coded by category -->
+        </ul>
+        <h3>Breakdown</h3>
+        <ul>
+          <li>[Sort by dropdown]</li>
+        </ul>
+      </menu>
     </div>
     <div id="breakdownContainer">
       <section id="expenses">
-        <p>Expenses: <span>sort by amount, sort by date, edit icons</span></p>
-        <ul>
-          <li>Rent | monthly on 1st | $1200 | Bills</li>
-          <li>Crunchyroll | monthly on 27th | $7 | Entertainment</li>
-        </ul>
+        <table>
+          <tr>
+            <th>Expense</th>
+            <th>Frequency</th>
+            <th>Amount</th>
+            <th>category</th>
+          </tr>
+          <tr>
+            <td>Rent</td>
+            <td>Monthly on 1st</td>
+            <td>$1200</td>
+            <td>Bills</td>
+          </tr>
+          <tr>
+            <td>Crunchyroll</td>
+            <td>Monthly on 23rd</td>
+            <td>$8</td>
+            <td>Entertainment</td>
+          </tr>
+        </table>
       </section>
       <section id="income">
-        <p>Income: <span>sort by amount, sort by date, edit icons</span></p>
-        <ul>
-          <p>Menards | weekly on Friday | $850 | Regular</p>
-          <p>Marketplace | weekly on Maonday | $30 | Irregular</p>
-        </ul>
+        <table>
+          <tr>
+            <th>Income</th>
+            <th>Frequency</th>
+            <th>Amount</th>
+            <th>category</th>
+          </tr>
+          <tr>
+            <td>Menards</td>
+            <td>Weekly on Friday</td>
+            <td>$850</td>
+            <td>Regular</td>
+          </tr>
+          <tr>
+            <td>Marketplace</td>
+            <td>weekly on Monday</td>
+            <td>$30</td>
+            <td>Irregular</td>
+          </tr>
+        </table>
       </section>
     </div>
   </main>
