--- a/graphicalBudgeting/index.html
+++ b/graphicalBudgeting/index.html
@@ -9,89 +9,78 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <header>
-    <a href="/index.html"><img id="headerLogo" src="images/logo.svg" alt="Graphical Budgeting logo"></a> <!-- TODO: round corners on logo arrow -->
-    <h1 id="date">September 2025</h1>
-    <h1 id="userName">Devion R</h1>
-    <img id="userAvatar" src="images/defaultAvatar.svg" alt="User avatar">
-    <img src="images/menuIcon.svg" alt="Menu button">
-  </header>
-  <main>
-    <div id="graphContainer">
-      <div id="graphPlaceholder">
-        <p>
-          [Graph Placeholder]<br>
-          - Calendar integration for current date<br>
-          - Store income/expenses and initial date/$ locally<br>
-          - Build graph day-by-day<br>
-        </p>
-      </div>
-      <menu id="graphOptions">
-        <h2>Options</h2>
-        <ul>
-          <li>[Color sceme dropdown]</li>
-          <li>[Editor button]</li>
-        </ul>
-        <h3>Graph</h3>
-        <ul>
-          <li>[Initial capital text input] | [Initial date calendar selector]</li>
-          <li>[Time range slider]</li>
-          <li>[Time increments slider]</li>
-          <li>[Origin toggle]</li> <!-- Toggle origin being zero or relative minimum -->
-          <li>[Categories toggle]</li> <!-- Toggle line graph to bar graph, color coded by category -->
-        </ul>
-        <h3>Breakdown</h3>
-        <ul>
-          <li>[Sort by dropdown]</li>
-        </ul>
-      </menu>
-    </div>
-    <div id="breakdownContainer">
-      <section id="expenses">
-        <table>
-          <tr>
-            <th>Expense</th>
-            <th>Frequency</th>
-            <th>Amount</th>
-            <th>category</th>
-          </tr>
-          <tr>
-            <td>Rent</td>
-            <td>Monthly on 1st</td>
-            <td>$1200</td>
-            <td>Bills</td>
-          </tr>
-          <tr>
-            <td>Crunchyroll</td>
-            <td>Monthly on 23rd</td>
-            <td>$8</td>
-            <td>Entertainment</td>
-          </tr>
-        </table>
-      </section>
-      <section id="income">
-        <table>
-          <tr>
-            <th>Income</th>
-            <th>Frequency</th>
-            <th>Amount</th>
-            <th>category</th>
-          </tr>
-          <tr>
-            <td>Menards</td>
-            <td>Weekly on Friday</td>
-            <td>$850</td>
-            <td>Regular</td>
-          </tr>
-          <tr>
-            <td>Marketplace</td>
-            <td>weekly on Monday</td>
-            <td>$30</td>
-            <td>Irregular</td>
-          </tr>
-        </table>
-      </section>
-    </div>
-  </main>
+  <div id="wrapper">
+    <header>
+      <a href="/index.html"><img id="headerLogo" src="images/logo.svg" alt="Graphical Budgeting logo"></a> <!-- TODO: round corners on logo arrow -->
+      <h1 id="date">September 2025</h1>
+      <h1 id="userName">Devion R</h1>
+      <img id="userAvatar" src="images/defaultAvatar.svg" alt="User avatar">
+      <img src="images/menuIcon.svg" alt="Menu button">
+    </header>
+    <nav>
+      <button onclick="display('graph')">Graph</button>
+      <button onclick="display('breakdown')">Breakdown</button>
+    </nav>
+    <article id="graph">
+      <p>
+        [Graph Placeholder]<br>
+        - Calendar integration for current date<br>
+        - Store income/expenses and initial date/$ locally<br>
+        - Build graph day-by-day<br>
+      </p>
+    </article>
+    <!-- <menu id="options">
+      <li>[Color sceme dropdown]</li>
+      <li>[Editor button]</li>
+      <li>[Initial capital text input] | [Initial date calendar selector]</li>
+      <li>[Time range slider]</li>
+      <li>[Time increments slider]</li>
+      <li>[Origin toggle]</li> Toggle origin being zero or relative minimum
+      <li>[Categories toggle]</li> Toggle line graph to bar graph, color coded by category
+      <li>[Sort by dropdown for breakdown]</li>
+    </menu> -->
+    <article id="breakdown">
+      <table id="expenses">
+        <tr>
+          <th>Expense</th>
+          <th>Frequency</th>
+          <th>Amount</th>
+          <th>category</th>
+        </tr>
+        <tr>
+          <td>Rent</td>
+          <td>Monthly on 1st</td>
+          <td>$1200</td>
+          <td>Bills</td>
+        </tr>
+        <tr>
+          <td>Crunchyroll</td>
+          <td>Monthly on 23rd</td>
+          <td>$8</td>
+          <td>Entertainment</td>
+        </tr>
+      </table>
+      <table id="income">
+        <tr>
+          <th>Income</th>
+          <th>Frequency</th>
+          <th>Amount</th>
+          <th>category</th>
+        </tr>
+        <tr>
+          <td>Menards</td>
+          <td>Weekly on Friday</td>
+          <td>$850</td>
+          <td>Regular</td>
+        </tr>
+        <tr>
+          <td>Marketplace</td>
+          <td>weekly on Monday</td>
+          <td>$30</td>
+          <td>Irregular</td>
+        </tr>
+      </table>
+    </article>
+  </div>
 </body>
 </html>
