--- a/Web1/Module3/DiscoverJuneau_Part02_drehbein/explore.html
+++ b/Web1/Module3/DiscoverJuneau_Part02_drehbein/explore.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Explore Juneau - Devion Rehbein</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="wrapper">
