Participated with part one of class on October 2, 2025

--- a/Web1/Module4/fpwStage04_drehbein/fpwStage04.html
+++ b/Web1/Module4/fpwStage04_drehbein/fpwStage04.html
@@ -41,44 +41,44 @@
         </nav>
 
         <div class="main">
-          <div id="navDescription">
-            <section id="defaultTab" class="tabDescription">
-              <img src="images/navPhotos/default_polaroidSmall.png" alt="Default 1870 Polaroid Image">
-              <h3>The Franco-Prussian War</h3>
-              <p>1870 was a disaster for France causing that action to thirst for a chance to avenge their territorial losses. On the other side of the hill, the war led to the establishment of a united Gernam enpire headed by Prussia.</p>
-            </section>
+          <!-- <div id="navDescription"> -->
+          <section id="defaultTab" class="tabDescription">
+            <img src="images/navPhotos/default_polaroidSmall.png" alt="Default 1870 Polaroid Image">
+            <h3>The Franco-Prussian War</h3>
+            <p>1870 was a disaster for France causing that action to thirst for a chance to avenge their territorial losses. On the other side of the hill, the war led to the establishment of a united Gernam enpire headed by Prussia.</p>
+          </section>
 
-            <section id="theWarTab" class="tabDescription">
-              <img src="images/navPhotos/theWar_polaroidSmall.png" alt="The war of 1870 Polaroid Image">
-              <h3>History of the War</h3>
-              <p>This war had namy close-run battles that ended poorly for the French. It led indirectly to WWI, which of course, led to WWII.</p>
-            </section>
-          </div>
+          <section id="theWarTab" class="tabDescription">
+            <img src="images/navPhotos/theWar_polaroidSmall.png" alt="The war of 1870 Polaroid Image">
+            <h3>History of the War</h3>
+            <p>This war had namy close-run battles that ended poorly for the French. It led indirectly to WWI, which of course, led to WWII.</p>
+          </section>
+          <!-- </div> -->
 
-          <div class="primaryContent">
+          <!-- <div class="primaryContent"> -->
 
-            <aside id="primaryPic" class="historyNotes">
-              <img src="images/primaryPic.png" alt="French Artilleryman - 1870">
-            </aside>
+          <aside id="primaryPic" class="historyNotes">
+            <img src="images/primaryPic.png" alt="French Artilleryman - 1870">
+          </aside>
 
-            <section class="motd historyNotes">
-              <h4>Why 1870?</h4>
-              <p>Large, colorfully uniformed armies with diverse types of units.</p><br>
-              <p>Large-scale battles, many of which were very close-run affairs with lots of "what-if" scenarios.</p><br>
-              <p>The fall of one empire.  The rise of another.</p><br>
-              <p>Seeds sown of a future, yet even more terrible war.</p><br>
-            </section>
+          <section class="motd historyNotes">
+            <h4>Why 1870?</h4>
+            <p>Large, colorfully uniformed armies with diverse types of units.</p><br>
+            <p>Large-scale battles, many of which were very close-run affairs with lots of "what-if" scenarios.</p><br>
+            <p>The fall of one empire.  The rise of another.</p><br>
+            <p>Seeds sown of a future, yet even more terrible war.</p><br>
+          </section>
 
-            <section class="quoteToday historyNotes">
-              <h4>Today's Snapshot</h4>
-              <p>
-                "General Frossard, undefeated, thought he had been defeated, and so he was.<br><br> General von Zastrow was half-defeated, but refused to be so was not.<br><br> This was the secret to the Prussian victory. "<br><br>
+          <section class="quoteToday historyNotes">
+            <h4>Today's Snapshot</h4>
+            <p>
+              "General Frossard, undefeated, thought he had been defeated, and so he was.<br><br> General von Zastrow was half-defeated, but refused to be so was not.<br><br> This was the secret to the Prussian victory. "<br><br>
 
-                - <span>French historian</span>
-              </p>
-              <br>
-            </section>
-          </div> <!-- end div.primaryContent -->
+              - <span>French historian</span>
+            </p>
+            <br>
+          </section>
+          <!-- </div> end div.primaryContent -->
         </div> <!-- end div.main -->
       </main>
 
