Participated with class on October 7, 2025

--- a/Web1/Module5/IronBrigade_MobileFirstSolution_withTable_startFiles/index.html
+++ b/Web1/Module5/IronBrigade_MobileFirstSolution_withTable_startFiles/index.html
@@ -54,7 +54,17 @@
         <a href="casualties.html" style="margin-left: 5px;">Learn More...</a>
         <a href="newsletterForm.html">Newsletter...</a>
       </article>
-    
+
+      <aside class="advert">
+        <h3>Advertisement</h3>
+        <p>
+          Supply all of your Iron Brigade reenacting equipment needs at: <br><br>
+          <a href="https://regimentalarms.shop/">The Regimental Quartermaster</a>
+        </p>
+        <br>
+        <h4>Supplying the troops<br> for over 50 years</h4>
+      </aside>
+
     </main>
     
     <footer class="mainFooter">
