--- a/Web1/Module5/IronBrigade_MobileFirstSolution_withTable_startFiles/casualties.html
+++ b/Web1/Module5/IronBrigade_MobileFirstSolution_withTable_startFiles/casualties.html
@@ -48,7 +48,70 @@
           <br>
           
           <!-- Table showing Iron Brigade Losses at Gettysburg goes here... -->
-					
+					<table>
+            <caption>From the Official Records of the Rebellion</caption>
+            <thead>
+              <tr>
+                <th>Regiment</th>
+                <th>Present</th>
+                <th>Losses</th>
+                <th>Killed</th>
+                <th>Wounded</th>
+                <th>Missing</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>2nd Wisconsin</td>
+                <td>302</td>
+                <td>233</td>
+                <td>26</td>
+                <td>155</td>
+                <td>52</td>
+              </tr>
+              <tr>
+                <td>6th Wisconsin</td>
+                <td>344</td>
+                <td>168</td>
+                <td>30</td>
+                <td>116</td>
+                <td>22</td>
+              </tr>
+              <tr>
+                <td>7th Wisconsin</td>
+                <td>343</td>
+                <td>178</td>
+                <td>27</td>
+                <td>133</td>
+                <td>52</td>
+              </tr>
+              <tr>
+                <td>19th Indiana</td>
+                <td>288</td>
+                <td>210</td>
+                <td>27</td>
+                <td>133</td>
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>24th Michigan</td>
+                <td>496</td>
+                <td>363</td>
+                <td>67</td>
+                <td>210</td>
+                <td>86</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="6">Note: These figures do not include the brigade guard (100 men and staff).</td>
+              </tr>
+            </tfoot>
+          </table>
+          <aside>
+            Brigade Strength = 1,883 officers and men<br>
+            Brigade Losses = 1.153 officers and men
+          </aside>
 
           <a href="index.html" style="margin-left: 5px;">Bivouac...</a>
 					<a href="newsletterForm.html">Newsletter...</a>
