--- a/Web1/Module5/DiscoverJuneau_Part04_drehbein/stay.html
+++ b/Web1/Module5/DiscoverJuneau_Part04_drehbein/stay.html
@@ -24,15 +24,15 @@
         <!-- widthDescriptorValue / (screenWidth * viewportWidth%) -->
       </div>
       <h2>Lodging in Juneau</h2>
-      <p>Part of the traveling experience is finding good lodging! Finding this will take some research, but it can be done. Juneau had some unique lodging opportunities in the historic downtown area including the famous Baranof Hotel, and there are VRBOand Airbnb rentals in Juneau and across the channel on Douglas Island. Douglas is quickly accessible to Juneau and all the exciting adventures of the area.</p>
+      <p>Part of the traveling experience is finding good lodging! Finding this will take some research, but it can be done. Juneau had some unique lodging opportunities in the historic downtown area including the famous Baranof Hotel, and there are VRBO and Airbnb rentals in Juneau and across the channel on Douglas Island. Douglas is quickly accessible to Juneau and all the exciting adventures of the area.</p>
       <section id="mainContent">
         <table>
           <thead>
             <tr>
-              <td>Lodging Options</td>
-              <td>Juneau</td>
-              <td>Douglas</td>
-              <td>Rating</td>
+              <th>Lodging Options</th>
+              <th>Juneau</th>
+              <th>Douglas</th>
+              <th>Rating</th>
             </tr>
           </thead>
           <tbody>
@@ -55,7 +55,7 @@
               <td>3.5 / 5</td>
             </tr>
             <tr>
-              <td>Auke Bay Chalet<br>(VRBO)<br>2100 Blueberry Lane<br>555-122-7700</td>
+              <td>Auke Bay Chalet (VRBO)<br>2100 Blueberry Lane<br>555-122-7700</td>
               <td></td>
               <td><img src="images/Red_Checkmark.png" alt="Red checkmark"></td>
               <td>4.9 / 5</td>
@@ -70,7 +70,7 @@
           <input type="text" id="email" name="email" placeholder="username@gmail.com"><br>
           <label for="phone">Phone</label>
           <input type="text" id="phone" name="phone" placeholder="555-122-7700"><br>
-          <label for="cost">$ Cost</label>
+          <label for="selectedCost">$ Cost</label>
           <select name="cost" id="selectedCost">
             <option value="">-- Please select an option --</option>
             <option value="$0 - $99">$0 - $99</option>
